installation/networkpolicy-allow-ingress-from-everywhere.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-from-everywhere
spec:
  podSelector: {}
  ingress:
  - {}
  policyTypes:
  - Ingress
